# ld46

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  index.data  index.html  index.js  index.wasm  main.c  start  web_build.sh
assets/: ball.aseprite  ball2.aseprite  ball3.aseprite  ball_squash.aseprite  brick.aseprite  brick2.aseprite  guy.aseprite  guy2.aseprite  guy2_fall.aseprite  guy2_jump.aseprite  guy2_left.aseprite  guy2_right.aseprite  guy_jumping.aseprite  guy_left.aseprite  guy_running.aseprite  platform.aseprite  player_jumping.aseprite  player_platform.aseprite
pkg/: README
w64pkg/: README.txt
web/: build.sh
